k8s/service.yaml
apiVersion: v1
  kind: Service
  metadata:
    name: mtg-api
    namespace: mtg-prod
  spec:
    type: ClusterIP
    selector:
      app: mtg-api
    ports:
      - port: 80
        targetPort: 8080
