k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: mtg-api
    namespace: mtg-prod
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
      - host: 138.197.188.60.nip.io
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: mtg-api
                  port:
                    number: 80
